spa alerts and login

--- a/InitiativesPlus.ClientApp/src/index.html
+++ b/InitiativesPlus.ClientApp/src/index.html
@@ -10,6 +10,25 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
+  <app-root>
+    <style>
+      app-root {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background: #18181f;
+      }
+      body {
+        background: #18181f;
+        margin: 0;
+        padding: 0;
+      }
+      img {
+        background-size:cover
+      }
+  </style>
+  <img src="https://cdn.dribbble.com/users/199982/screenshots/4156781/loader1-dribbble-shot.gif">
+  </app-root>
 </body>
 </html>
