spa - changing roles

--- a/InitiativesPlus.ClientApp/src/index.html
+++ b/InitiativesPlus.ClientApp/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ClientApp</title>
+  <title>InitiativesPLUS</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -17,10 +17,10 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background: #18181f;
+        background: #ffffff;
       }
       body {
-        background: #18181f;
+        background: #ffffff;
         margin: 0;
         padding: 0;
       }
@@ -28,7 +28,7 @@
         background-size:cover
       }
   </style>
-  <img src="https://cdn.dribbble.com/users/199982/screenshots/4156781/loader1-dribbble-shot.gif">
+  <img src="https://i.pinimg.com/originals/6e/bf/3e/6ebf3efce7752bc965431f24ec0eac8b.gif">
   </app-root>
 </body>
 </html>
